fix : fixed scrollbar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,12 @@
 @import "tailwindcss";
 
+html, body, #root {
+  height: 100%;
+  overflow: hidden; /* Prevent scrolling on whole page */
+  margin: 0;
+  padding: 0;
+}
+
 
 @layer utilities {
   @keyframes fade-slide {
